# KengU

./: .env  .env.example  .gitignore  README.md  README_zh.md  auth_example.py  dspy_type.py  main.py  pyproject.toml  scraper_example.py  test_dao.py  test_planner_chat.py  test_rag_agent.py  updater_example.py
agents/: __init__.py  llm.py
agents/chat_agent/: __init__.py
agents/planner_agent/: .gitignore  __init__.py  planner_agent.py  pyproject.toml  readme.md
agents/rag_agent/: __init__.py  rag_agent.py
agents/scraper_agent/: __init__.py  embeddings_generator.py  updater.py
api/: chat.py
auth/: __init__.py  auth_hku.py
core/: config.py
dao/: __init__.py  agent_interaction.py  assignment.py  config.py  connector.py  course.py  study_session.py  user.py  usercourse.py
docs/: alt_generate_monthly_plan.mmd  alt_intent_parsing.mmd  alt_list_pending.mmd  alt_log_study_session.mmd  alt_mark_complete.mmd  alt_schedule_request.mmd  sequence_main.mmd
example/: auth_example.py  rag_agent_example.py  scraper_agent_example.py
kengu-fronted/: package-lock.json  package.json  vue.config.js
kengu-fronted/src/: App.vue  (+1 more)
models/: __init__.py
moodle/: calendar_a.py  calendar_events.json
planner_scraper/: __init__.py  calendar.py  utils.py
rag/: __init__.py  answer_generator.py  chunker.py  embedder.py  retriever.py  service.py  standardizer.py  vector_store.py
rag_scraper/: __init__.py  exambase.py  logger.py  moodle.py  parallel.py  scraper.py
services/: serve.py
sql/: create_table.sql
test/: test.py  test_calendar_crawler.py  test_planner_chat.py
(+22 files in other folders)
