[project]
name = "kengU"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "dspy>=3.0.3",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
